# cpp_image_render

./: CMakeLists.txt  camera.h  color.h  common.h  first.cc  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
